# SimpleAlgebra

./: .gitignore  .gitignore.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  matrixTest
.github/workflows/: main.yml  manual.yml
include/: matrix.h
src/: main.cpp  matrix.cpp  matrix.cu  matrix_mul
test/: matrixTest.cpp  test.cpp
